Update ChatServer.java
adição de envio de arquivo pelo chat privado